Fixed code word-wrap (needs tweaking)

--- a/assets/overrides.css
+++ b/assets/overrides.css
@@ -91,6 +91,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockqu
     font-size: 1em;
 }
 
+code {
+    word-wrap: break-word;
+}
+
 .pagination {
     margin-top: 10px;
 }
